# cmake-googletest-template

./: CMakeLists.txt  README.md
src/: main.cpp
src/share/: Person.cpp  Person.hpp
tests/: utest-Person.cpp
